--- a/docker/apache/diva-proxy-vhosts.conf
+++ b/docker/apache/diva-proxy-vhosts.conf
@@ -13,9 +13,13 @@ LoadModule proxy_http_module modules/mod_proxy_http.so
         Require all granted
     </Proxy>
 
-    # API
+    # REST
     ProxyPass        /rest/              http://diva:8080/diva/rest/
     ProxyPassReverse /rest/              http://diva:8080/diva/rest/
+    
+    # IIIF
+    ProxyPass        /iiif/              http://diva:8080/diva/iiif/
+    ProxyPassReverse /iiif/              http://diva:8080/diva/iiif/
 
     # LOGIN
     ProxyPass        /login/rest/        http://login:8080/login/rest/
