Update proxy conf

--- a/docker/apache/diva-proxy-vhosts.conf
+++ b/docker/apache/diva-proxy-vhosts.conf
@@ -1,5 +1,7 @@
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
+LoadModule headers_module modules/mod_headers.so
 
 <VirtualHost *:80>
     ServerName diva-apache
@@ -8,30 +10,75 @@ LoadModule proxy_http_module modules/mod_proxy_http.so
     ProxyRequests Off
     ProxyPreserveHost On
 
-    # To avoid blocking any proxies
-    <Proxy *>
-        Require all granted
-    </Proxy>
+    RequestHeader set X-Forwarded-Proto "https" early
+
+    # SHIBBOLETH
+    #<Location /Shibboleth.sso>
+    #    AuthType shibboleth
+    #    ShibRequestSetting requiresession On
+    #    ShibUseHeaders On
+    #    require valid-user
+    #    SetHandler shib
+    #</Location>
 
     # REST
-    ProxyPass        /rest/              http://diva:8080/diva/rest/
-    ProxyPassReverse /rest/              http://diva:8080/diva/rest/
-    
+    <Location /diva/rest>
+        Require all granted
+        ProxyPass           http://diva:8080/diva/rest
+        ProxyPassReverse    http://diva:8080/diva/rest
+    </Location>
+
     # IIIF
-    ProxyPass        /iiif/              http://diva:8080/diva/iiif/
-    ProxyPassReverse /iiif/              http://diva:8080/diva/iiif/
+    <Location /diva/iiif>
+        Require all granted
+        ProxyPass           http://diva:8080/diva/iiif
+        ProxyPassReverse    http://diva:8080/diva/iiif
+    </Location>
 
     # LOGIN
-    ProxyPass        /login/rest/        http://login:8080/login/rest/
-    ProxyPassReverse /login/rest/        http://login:8080/login/rest/
+    <Location /diva/login>
+        Require all granted
+        ProxyPass           http://login:8080/login
+        ProxyPassReverse    http://login:8080/login
+    </Location>
 
     # IDPLOGIN
-    ProxyPass        /idplogin/login/    http://idplogin:8080/idplogin/login/
-    ProxyPassReverse /idplogin/login/    http://idplogin:8080/idplogin/login/
+    <Location /diva/idplogin>
+#        AuthType shibboleth
+#        ShibRequestSetting requireSession true
+#        ShibUseHeaders On
+        require valid-user
+        ProxyPass           http://idplogin:8080/idplogin
+        ProxyPassReverse    http://idplogin:8080/idplogin
+    </Location>
 
     # JSCLIENT
-    ProxyPass        /jsclient/          http://diva-jsclient:8080/jsclient/
-    ProxyPassReverse /jsclient/          http://diva-jsclient:8080/jsclient/
+    <Location /diva/jsclient>
+        Require all granted
+        ProxyPass           http://diva-jsclient:8080/jsclient
+        ProxyPassReverse    http://diva-jsclient:8080/jsclient
+    </Location>
+
+    # DIVACLIENT
+    <Location /divaclient>
+        Require all granted
+        ProxyPass           http://diva-divaclient:5173/divaclient
+        ProxyPassReverse    http://diva-divaclient:5173/divaclient
+    </Location>
+
+    # FITNESSE
+    <Location /diva/fitnesse>
+        Require all granted
+        ProxyPass           http://diva-fitnesse:8090/diva/fitnesse
+        ProxyPassReverse    http://diva-fitnesse:8090/diva/fitnesse
+    </Location>
+
+    # PLAYWRIGHT
+    <Location /diva/playwright>
+        Require all granted
+        ProxyPass           http://diva-playwright:8080/diva/playwright
+        ProxyPassReverse    http://diva-playwright:8080/diva/playwright
+    </Location>
 
     ErrorLog   logs/diva-proxy-error.log
     CustomLog  logs/diva-proxy-access.log combined
