--- a/docker/apache/diva-proxy-vhosts.conf
+++ b/docker/apache/diva-proxy-vhosts.conf
@@ -22,28 +22,28 @@ LoadModule headers_module modules/mod_headers.so
     #</Location>
 
     # REST
-    <Location /diva/rest>
+    <Location /rest>
         Require all granted
         ProxyPass           http://diva:8080/diva/rest
         ProxyPassReverse    http://diva:8080/diva/rest
     </Location>
 
     # IIIF
-    <Location /diva/iiif>
+    <Location /iiif>
         Require all granted
         ProxyPass           http://diva:8080/diva/iiif
         ProxyPassReverse    http://diva:8080/diva/iiif
     </Location>
 
     # LOGIN
-    <Location /diva/login>
+    <Location /login>
         Require all granted
         ProxyPass           http://login:8080/login
         ProxyPassReverse    http://login:8080/login
     </Location>
 
     # IDPLOGIN
-    <Location /diva/idplogin>
+    <Location /idplogin>
 #        AuthType shibboleth
 #        ShibRequestSetting requireSession true
 #        ShibUseHeaders On
@@ -53,7 +53,7 @@ LoadModule headers_module modules/mod_headers.so
     </Location>
 
     # JSCLIENT
-    <Location /diva/jsclient>
+    <Location /jsclient>
         Require all granted
         ProxyPass           http://diva-jsclient:8080/jsclient
         ProxyPassReverse    http://diva-jsclient:8080/jsclient
@@ -67,14 +67,14 @@ LoadModule headers_module modules/mod_headers.so
     </Location>
 
     # FITNESSE
-    <Location /diva/fitnesse>
+    <Location /fitnesse>
         Require all granted
         ProxyPass           http://diva-fitnesse:8090/diva/fitnesse
         ProxyPassReverse    http://diva-fitnesse:8090/diva/fitnesse
     </Location>
 
     # PLAYWRIGHT
-    <Location /diva/playwright/>
+    <Location /playwright/>
         Require all granted
         ProxyPass           http://diva-playwright:8080/diva/playwright/
         ProxyPassReverse    http://diva-playwright:8080/diva/playwright/
