--- a/docker/apache/diva-proxy-vhosts.conf
+++ b/docker/apache/diva-proxy-vhosts.conf
@@ -69,8 +69,8 @@ LoadModule headers_module modules/mod_headers.so
     # FITNESSE
     <Location /fitnesse>
         Require all granted
-        ProxyPass           http://diva-fitnesse:8090/diva/fitnesse
-        ProxyPassReverse    http://diva-fitnesse:8090/diva/fitnesse
+        ProxyPass           http://diva-fitnesse:8090/fitnesse
+        ProxyPassReverse    http://diva-fitnesse:8090/fitnesse
     </Location>
 
     # PLAYWRIGHT
