remove https setting

--- a/docker/apache/diva-proxy-vhosts.conf
+++ b/docker/apache/diva-proxy-vhosts.conf
@@ -10,7 +10,7 @@ LoadModule headers_module modules/mod_headers.so
     ProxyRequests Off
     ProxyPreserveHost On
 
-    RequestHeader set X-Forwarded-Proto "https" early
+    # RequestHeader set X-Forwarded-Proto "https" early
 
     # SHIBBOLETH
     #<Location /Shibboleth.sso>
