--- a/docker/apache/diva-proxy-vhosts.conf
+++ b/docker/apache/diva-proxy-vhosts.conf
@@ -74,10 +74,10 @@ LoadModule headers_module modules/mod_headers.so
     </Location>
 
     # PLAYWRIGHT
-    <Location /playwright/>
+    <Location /playwright>
         Require all granted
-        ProxyPass           http://diva-playwright:8080/diva/playwright/
-        ProxyPassReverse    http://diva-playwright:8080/diva/playwright/
+        ProxyPass           http://diva-playwright:8080
+        ProxyPassReverse    http://diva-playwright:8080
     </Location>
 
     ErrorLog   logs/diva-proxy-error.log
