--- a/docker/files/apache/diva-proxy-vhosts.conf
+++ b/docker/files/apache/diva-proxy-vhosts.conf
@@ -1,85 +1,73 @@
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
-LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
-LoadModule headers_module modules/mod_headers.so
+LoadModule mod_shib modules/mod_shib.so
 
 <VirtualHost *:80>
     ServerName diva-apache
+    ErrorLog   logs/diva-proxy-error.log
+    CustomLog  logs/diva-proxy-access.log combined
 
     # Disable forward-proxy, enable reverse proxy
     ProxyRequests Off
     ProxyPreserveHost On
 
-    # RequestHeader set X-Forwarded-Proto "https" early
-
-    # SHIBBOLETH
-    #<Location /Shibboleth.sso>
-    #    AuthType shibboleth
-    #    ShibRequestSetting requiresession On
-    #    ShibUseHeaders On
-    #    require valid-user
-    #    SetHandler shib
-    #</Location>
-
-    # REST
     <Location /rest>
         Require all granted
         ProxyPass           http://diva:8080/diva/rest
         ProxyPassReverse    http://diva:8080/diva/rest
     </Location>
 
-    # IIIF
-    <Location /iiif>
-        Require all granted
-        ProxyPass           http://diva:8080/diva/iiif
-        ProxyPassReverse    http://diva:8080/diva/iiif
-    </Location>
-
-    # LOGIN
     <Location /login>
         Require all granted
         ProxyPass           http://login:8080/login
         ProxyPassReverse    http://login:8080/login
     </Location>
 
-    # IDPLOGIN
+    <Location /Shibboleth.sso>
+        AuthType shibboleth
+        ShibRequestSetting requiresession On
+        ShibUseHeaders On
+        require valid-user
+        SetHandler shib
+    </Location>
+
     <Location /idplogin>
-#        AuthType shibboleth
-#        ShibRequestSetting requireSession true
-#        ShibUseHeaders On
+        AuthType shibboleth
+        ShibRequestSetting requireSession true
+        ShibUseHeaders On
         require valid-user
         ProxyPass           http://idplogin:8080/idplogin
         ProxyPassReverse    http://idplogin:8080/idplogin
     </Location>
 
-    # JSCLIENT
-    <Location /jsclient>
+    <Location /iiif>
         Require all granted
-        ProxyPass           http://diva-jsclient:8080/jsclient
-        ProxyPassReverse    http://diva-jsclient:8080/jsclient
+        ProxyPass           http://diva:8080/diva/iiif
+        ProxyPassReverse    http://diva:8080/diva/iiif
     </Location>
 
-    # DIVACLIENT
-    <Location /divaclient>
-        Require all granted
-        ProxyPass           http://diva-divaclient:5173/divaclient
-        ProxyPassReverse    http://diva-divaclient:5173/divaclient
-    </Location>
-
-    # FITNESSE
     <Location /fitnesse>
         Require all granted
         ProxyPass           http://diva-fitnesse:8090/fitnesse
         ProxyPassReverse    http://diva-fitnesse:8090/fitnesse
     </Location>
 
-    # PLAYWRIGHT
+    <Location /jsclient>
+        Require all granted
+        ProxyPass           http://diva-jsclient:8080/jsclient
+        ProxyPassReverse    http://diva-jsclient:8080/jsclient
+    </Location>
+
+    <Location /divaclient>
+        Require all granted
+        ProxyPass           http://diva-divaclient:5173/divaclient
+        ProxyPassReverse    http://diva-divaclient:5173/divaclient
+    </Location>
+
     <Location /playwright>
         Require all granted
         ProxyPass           http://diva-playwright:8080
         ProxyPassReverse    http://diva-playwright:8080
     </Location>
 
-    ErrorLog   logs/diva-proxy-error.log
-    CustomLog  logs/diva-proxy-access.log combined
 </VirtualHost>
