--- a/docker/files/apache/diva-proxy-vhosts.conf
+++ b/docker/files/apache/diva-proxy-vhosts.conf
@@ -1,11 +1,12 @@
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule mod_shib modules/mod_shib.so
 LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
 LoadModule headers_module modules/mod_headers.so
 
 <VirtualHost _default_:80>
-    ErrorLog   logs/diva-proxy-error.log
-    CustomLog  logs/diva-proxy-access.log combined
+    ErrorLog   logs/error.log
+    CustomLog  logs/access.log combined
 
     # Disable forward-proxy, enable reverse proxy
     ProxyRequests Off
