--- a/docker/files/apache/cora-vhosts.conf
+++ b/docker/files/apache/cora-vhosts.conf
@@ -49,8 +49,8 @@ LoadModule headers_module modules/mod_headers.so
 
     <Location /fitnesse>
         Require all granted
-        ProxyPass           http://diva-fitnesse:8090/fitnesse  timeout=600
-        ProxyPassReverse    http://diva-fitnesse:8090/fitnesse
+        ProxyPass           http://diva-fitnesse:8090/{FITNESSE_CONTEXT_ROOT}  timeout=600
+        ProxyPassReverse    http://diva-fitnesse:8090/{FITNESSE_CONTEXT_ROOT}
     </Location>
 
     <Location /jsclient>
