add websockets for playwright

--- a/docker/files/apache/cora-vhosts.conf
+++ b/docker/files/apache/cora-vhosts.conf
@@ -69,6 +69,8 @@ LoadModule headers_module modules/mod_headers.so
         Require all granted
         ProxyPass           http://diva-playwright:8080  timeout=600
         ProxyPassReverse    http://diva-playwright:8080
+        ProxyPass           ws://diva-playwright:8080
+        ProxyPassReverse    ws://diva-playwright:8080
     </Location>
-
+    
 </VirtualHost>
