add websokets to divaclient

--- a/docker/files/apache/cora-vhosts.conf
+++ b/docker/files/apache/cora-vhosts.conf
@@ -63,6 +63,8 @@ LoadModule headers_module modules/mod_headers.so
         Require all granted
         ProxyPass           http://diva-divaclient:5173/divaclient 
         ProxyPassReverse    http://diva-divaclient:5173/divaclient
+        ProxyPass           ws://diva-divaclient:5173/divaclient
+        ProxyPassReverse    ws://diva-divaclient:5173/divaclient
     </Location>
 
     <Location /playwright>
