dynamic vhost for divaclient

--- a/docker/files/apache/cora-vhosts.conf
+++ b/docker/files/apache/cora-vhosts.conf
@@ -61,10 +61,10 @@ LoadModule headers_module modules/mod_headers.so
 
     <Location /divaclient>
         Require all granted
-        ProxyPass           http://diva-divaclient:5173/divaclient 
-        ProxyPassReverse    http://diva-divaclient:5173/divaclient
-        ProxyPass           ws://diva-divaclient:5173/divaclient
-        ProxyPassReverse    ws://diva-divaclient:5173/divaclient
+        ProxyPass           http://diva-divaclient:5173/{DIVA_CLIENT_CONTEXT_ROOT} 
+        ProxyPassReverse    http://diva-divaclient:5173/{DIVA_CLIENT_CONTEXT_ROOT}
+        ProxyPass           ws://diva-divaclient:5173/{DIVA_CLIENT_CONTEXT_ROOT}
+        ProxyPassReverse    ws://diva-divaclient:5173/{DIVA_CLIENT_CONTEXT_ROOT}
     </Location>
 
     <Location /playwright>
