Redirect root path to /divaclient

--- a/docker/files/apache/cora-vhosts.conf
+++ b/docker/files/apache/cora-vhosts.conf
@@ -8,6 +8,9 @@ LoadModule headers_module modules/mod_headers.so
     ErrorLog   logs/error.log
     CustomLog  logs/access.log combined
 
+    # Redirect root to divaclient
+    RedirectMatch ^/?$ /divaclient
+
     # Disable forward-proxy, enable reverse proxy
     ProxyRequests Off
     ProxyPreserveHost On
