CORA-3084 Add server name on start of a pod

--- a/docker/files/apache/cora-vhosts.conf
+++ b/docker/files/apache/cora-vhosts.conf
@@ -7,6 +7,8 @@ LoadModule headers_module modules/mod_headers.so
 <VirtualHost _default_:80>
     ErrorLog   logs/error.log
     CustomLog  logs/access.log combined
+    
+    ServerName {SERVER_NAME}
 
     # Redirect root to divaclient
     RedirectMatch ^/?$ /divaclient
